installdir = $(datadir)/fonts

dist_install_DATA = \
	ae_AlMateen.ttf \
	lcd.ttf \
	md_khmurabi_10.ttf \
	nmsbd.ttf \
	tuxtxt.ttf \
        analog.ttf \
        Army_Bold_G.ttf \
        army-digital.ttf \
        Army_Regular_L.ttf \
        ForgottenFuturistShadow.ttf \
        goodtime.ttf \
        nmsbd2.ttf \
        tiny.ttf \
        titles.ttf
         
