installdir = $(pkglibdir)/python/Plugins/SystemPlugins

SUBDIRS = SoftwareManager PositionerSetup Satfinder \
	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
	DefaultServicesScanner NFIFlash DiseqcTester CommonInterfaceAssignment \
	CleanupWizard VideoEnhancement WirelessLan NetworkWizard \
	TempFanControl Fancontrol WirelessLanSetup ManualFancontrol \
	RemoteControlCode UI3DSetup UIPositionSetup HDMICEC LEDBrightnessSetup \
	WirelessAccessPoint ZappingModeSelection \
	DeviceManager WOLSetup NetDrive AudioEffect AnimationSetup \
	BoxModeConfig Solo4kMiscControl FastChannelChange Ultimo4kMiscControl BlackHoleApi

install_PYTHON =	\
	__init__.py
